# ChuwitchWindow

./: .gitignore  README.md  SPEC.md  index.html  package-lock.json  package.json  release.ps1  vite.config.ts
docs/: BACK.md  DEV.md  NO.md  SHORTCUTKEY.md  SPEC.md  SPECv0.1.md  SPECv0.2.md
scripts/: update_version.ps1
src/: App.tsx  index.css  style.css  types.ts
src-tauri/: Cargo.toml  chuwitch_config.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: hooks.nsh  installer.nsi
src-tauri/permissions/: app.toml
src-tauri/src/: admin.rs  arrange.rs  commands.rs  config.rs  history.rs  hotkey.rs  hotplug.rs  lib.rs  logger.rs  logic.rs  main.rs  monitor.rs  pin.rs  rule.rs  tray.rs  window.rs
src/components/: AboutTab.tsx  ArrangePopup.tsx  CustomDialog.tsx  ExclusionPanel.tsx  MonitorMap.tsx  SettingsPanel.tsx  Sidebar.tsx
src/lib/: ruleUtils.ts
